syntax = "proto3";
package tutorial;

import "permission.proto";
import "seed_player.proto";
import "seed_actor.proto";

option go_package = "github.com/ebenaum/thekeeper/proto;proto";

enum EventType {
  EventTypePermission = 0;
  EventTypeSeedPlayer = 1;
  EventTypeSeedActor = 2;
}

message Event {
  oneof msg {
    EventPermission Permission = 2;
    EventSeedPlayer       SeedPlayer = 3;
    EventSeedActor SeedActor= 4;
  }
}

message Events {
  repeated Event events = 1;
}